Fix hover touch effect on mobile devices

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -103,7 +103,7 @@
   transition: border-color .1s linear;
 }
 
-@media (hover: hover) {
+@media (hover: hover) and (pointer: fine) {
   .header p {
     position: relative;
     width: max-content;
@@ -111,7 +111,7 @@
 
   .header p:after {
     content: "";
-    display: block;  
+    display: block;
     height: 2px;
     width: 0;
     position: absolute;
